# godotHaskellTest

./: .gitignore  .gitmodules  CHANGELOG.md  cabal.project  flake.nix  godotHaskellTest.cabal
dodge/: dodge.cabal
dodge/ffi/cbits/: flib.c
dodge/ffi/flib/: FLib.hs
dodge/game/: Player.gdns  Player.tscn  project.godot
dodge/game/lib/: libdodge.gdnlib
dodge/src/: Lib.hs
sandbox/: Shakefile.hs  editgame  sandbox.cabal
sandbox/ffi/cbits/: flib.c
sandbox/game/: MySprite.gdns  Sprite.tscn  Sprite2.tscn  project.godot
sandbox/game/lib/: libsandbox.gdnlib
sandbox/src/: Lib.hs
